# DjangoTemplate

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
collection/: urls.py  views.py
core/: settings.py  urls.py
register/: urls.py  views.py
retrieval/: models.py  urls.py  views.py
src/config/: settings.py  urls.py
src/djangopractice/: models.py  urls.py  views.py
src/templates/djangopractice/: question_detail.html  question_list.html
templates/admin/: test_model_change_list.html
