[tool.poetry]
name = "djangotemplate"
version = "0.1.0"
description = ""
authors = ["dja1369 <qjxlftn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.2"
django = "^5.1"
mongoengine = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
